Fix two-column alignment

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,10 +1,12 @@
 @media only screen and (min-width: 768px) {
     body {
+        display: flex;
         margin: 0;
+        margin-top: 90px; /* TODO trovare alternativa (brutto) */
     }
 
     nav {
-        position: relative;
+        position: fixed;
         top: 0;
         bottom: auto;
         border: none;
@@ -15,13 +17,12 @@
     }
 
     .col-left {
-        width: 50%;
+        flex: 6;
         margin: 0 48px;
-        float: left;
     }
 
     .col-right {
-        float: left;
+        flex: 4;
         margin-right: 48px;
     }
 
