--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,13 @@ nav {
     bottom: 0;
     left: 0;
     border-top: 2px solid var(--overlay2);
+    font-size: 10px;
 }
 
 nav ul {
     display: flex;
     justify-content: space-around;
-    padding: 0 10%;
+    padding: 0 25%;
 }
 
 nav a:not(:hover) {
@@ -138,6 +139,11 @@ header .edit {
     margin-top: 0;
     margin-right: var(--base-spacing);
     line-height: 1.4;
+}
+
+/* Bio text */
+.bio p:first-child {
+    display: block;
 }
 
 /* Movies */
